# Sandakan

./: .env.example  .gitignore  .mcp.template.json  CONFIGURATION.md  Cargo.toml  README.md  appsettings.Local.json  appsettings.Prod.json  appsettings.Test.json  evaluation_report.json  openapi.json  temp.rs
.ai/: architecture.md  code.guidelines.md  tests.guidelines.md  user-story.guidelines.md
ai/: code.guidelines.md  tests.guidelines.md
backlog/: US-001-markdown-aware-splitter.md  US-006-embeddings.md  US-007.rag-pipeline.md  US-008.audio-transcripts.md  US-009-rag-evaluation.md  US-009-streaming.md  US-010-persistance-layer.md  US-010.gaps.md  US-011-llm-efficient-commands.md  US-012-audio-vad-silence-removal.md  US-013-rag-media-timestampicitations.md  US-014-llm-navigation-refactor.md  US-015-swap-out-pdf-vision.md  US-018-usage-of-subagents.md  US-019-ffmpeg-sidecar.md  US-020-eval-background-worker-observability.md  US-021-mcp-tool-usage.md   US-022-agent-streaming-and-parallel-tools.md  US-023-mcp-wire-protocol.md  US-024-rag-as-mcp-tool.md  US-032-terraform-azure-infrastructure.md
collections/: README.md  chat-completions.hurl  chat-streaming.hurl  e2e-audio-ingest-and-query.hurl  e2e-ingest-and-query.hurl  error-cases.hurl  health.hurl  ingest-audio.hurl  ingest-pdf.hurl  ingest-text.hurl  ingest-video.hurl  job-status.hurl  models.hurl  query.hurl  sample-notes.txt
infrastructure/: .env.example  docker-compose.yml  tempo-config.yml
migrations/: 001_create_jobs_table.sql  002_create_conversations_table.sql  003_create_eval_events_table.sql  (+9 more)
(+292 files in other folders)
