[package]
name = "sandakan"
version = "0.1.0"
edition = "2024"
authors = ["RAG Pipeline Team"]
license = "MIT"
rust-version = "1.85"

[dependencies]
# Application layer
async-trait = "0.1"
thiserror = "2"

# Infrastructure layer
tokio = { version = "1", features = ["full"] }
qdrant-client = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Presentation layer
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
tiktoken-rs = "0.9.1"
unicode-segmentation = "1.12.0"

[dev-dependencies]
mockall = "0.13"
axum-test = "16"
testcontainers = "0.24"
